@@ -181,7 +181,7 @@ int main()
 		rStickHat.setPosition(rStickOutline.getPosition() + rDirection);
 
 		/* DRAW */
-		window.beginDraw();
+		window.clear();
 
 		window.draw(dpadUp);
 		window.draw(dpadLeft);
@@ -207,7 +207,7 @@ int main()
 		window.draw(lStickHat);
 		window.draw(rStickHat);
 
-		window.endDraw();
+		window.display();
 	}
 
 	return 0;
